--- a/plugins/SimilarEntries/config.yaml
+++ b/plugins/SimilarEntries/config.yaml
@@ -1,7 +1,7 @@
 id: SimilarEntries
 name: SimilarEntries
 version: 0.0.1
-description: <__trans phrase='description of SimilarEntries'>
+description: <__trans phrase='Make a list of related entries.'>
 plugin_link: https://github.com/bit-part/mt-plugin-SimilarEntries/
 author_name: <__trans phrase='bit part LLC'>
 author_link: http://bit-part.net/
