--- a/plugins/SimilarEntries/config.yaml
+++ b/plugins/SimilarEntries/config.yaml
@@ -1,6 +1,6 @@
 id: SimilarEntries
 name: SimilarEntries
-version: 0.0.1
+version: 1.0.0 beta
 description: <__trans phrase='Make a list of related entries.'>
 plugin_link: https://github.com/bit-part/mt-plugin-SimilarEntries/
 author_name: <__trans phrase='bit part LLC'>
